backend/edu-user/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-user-ing
  namespace: edu-user
spec:
  ingressClassName: nginx
  rules:
    - host: "edu-user.211.254.213.33.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edu-user-svc
                port:
                  number: 80
